# DCAS-PolicyEngine

./: CMakeLists.txt  IMPLEMENTATION_QA_2026-04-23.md  IMPLEMENTATION_VERIFICATION.md  README.md
DOCS/: FINAL-DELIVERY.md  R171(kor).md  R171-read-this-first.md  README-context-research.md  context-integration-spec.md  control-policy-Baseline.md  control-policy-v1.md  driver-context-research.md  executive-summary.md  pattern-comparison-visual.md  plan.md  research.md  scale-car-baseline-conversion.md  state-machine-Baseline.md  state-machine-v1.md  table_research.md
include/dcas_policy_engine/: perception_adapter.hpp  policy_runtime.hpp  speed_band_estimator.hpp  state_timer_store.hpp  step_b.hpp  step_c.hpp  threshold_scheduler.hpp  types.hpp
src/: main.cpp  policy_runtime.cpp  step_b.cpp  step_c.cpp
tests/: test_policy.cpp
